--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
  PORT = 8000
- DATEBASE_URL = "mongodb+srv://garimabathlabluespraing:Safekaro@24@cluster0.d2qm5l9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+ DATEBASE_URL = "mongodb://127.0.0.1:27017"
  JWT_SECRET_KEY= your-secret-key
