added build folder and otp generator.

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
  PORT = 8000
  DATEBASE_URL = "mongodb://127.0.0.1:27017"
  JWT_SECRET_KEY= your-secret-key
+
+# Email OTP Generate
+SMPT_HOST=smtp.hostinger.com
+SMPT_PORT=465
+SMPT_MAIL=noreply@bluesparing.com
+SMPT_APP_PASS=Safekaro@24
