--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "start:dev": "node ./dist/bundle.cjs",
+    "start:prod": "node ./distProd/bundle.cjs",
+    "build:dev": "webpack --config webpack.config.js --mode development",
+    "build:prod": "webpack --config webpack.prod.js --mode production"
   },
   "author": "safekaro",
   "license": "ISC",
-  "type": "module",
+  "type":"module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -25,11 +29,18 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
+    "randomstring": "^1.3.0",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.1"
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "nodemon": "^3.1.1",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
