booking name change

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
  PORT = 8000
- DATEBASE_URL = "mongodb://127.0.0.1:27017"
- #DATEBASE_URL = "mongodb+srv://nikhilbluesparing:safekaro123@cluster0.afvzzxw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+ DATEBASE_URL = "mongodb+srv://nikhilbluesparing:safekaro123@cluster0.afvzzxw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+# DATEBASE_URL = "mongodb://127.0.0.1:27017"
  JWT_SECRET_KEY= your-secret-key
 
 
