--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
     "randomstring": "^1.3.0",
+    "serve-index": "^1.9.1",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
     "xlsx": "^0.18.5"
