--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
     "randomstring": "^1.3.0",
     "serve-index": "^1.9.1",
     "uuid": "^9.0.1",
