--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1",
+    "pdf.js-extract": "^0.2.1",
     "randomstring": "^1.3.0",
     "serve-index": "^1.9.1",
     "uuid": "^9.0.1",
