--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "pdf.js-extract": "^0.2.1",
     "randomstring": "^1.3.0",
     "serve-index": "^1.9.1",
+    "sharp": "^0.33.5",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
     "xlsx": "^0.18.5"
