jwt refresh token added.

--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@
 #DATEBASE_URL="mongodb://127.0.0.1/safekaro"
  DATEBASE_URL = "mongodb+srv://nikhilbluesparing:safekaro123@cluster0.afvzzxw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 # DATEBASE_URL = "mongodb://127.0.0.1:27017"
- JWT_SECRET_KEY= your-secret-key
+JWT_SECRET_KEY=your_jwt_secret_key
+JWT_REFRESH_SECRET_KEY=your_refresh_secret_key
+
 
 
 
