--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 #DATEBASE_URL="mongodb://127.0.0.1/safekaro"
  DATEBASE_URL = "mongodb+srv://nikhilbluesparing:safekaro123@cluster0.afvzzxw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 # DATEBASE_URL = "mongodb://127.0.0.1:27017"
-JWT_SECRET_KEY= "Y&T^&T^HSBGYSGHYUB"
-JWT_REFRESH_SECRET_KEY= "Y&T^&T^HSBGYSGHYUB"
+JWT_SECRET_KEY= safekaro@2024
+JWT_REFRESH_SECRET_KEY= safekaro@2024
 
 
 
