email send while motorpolicy created.

--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@
 
 
 # Email OTP Generate
-SMPT_HOST=smtp.hostinger.com
-SMPT_PORT=465
-SMPT_MAIL=noreply@bluesparing.com
+SMPT_HOST= "smtp.hostinger.com"
+SMPT_PORT=465 
+SMPT_MAIL=noreplay@bluesparing.com
 SMPT_APP_PASS=Safekaro@24
 
