--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pdf.js-extract": "^0.2.1",
     "randomstring": "^1.3.0",
     "serve-index": "^1.9.1",
+    "sharp": "^0.33.5",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
     "xlsx": "^0.18.5"
